--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -7,9 +7,18 @@ name = "solana-sdk-zig-program-test"
 repository = "https://github.com/joncinque/solana-sdk-zig"
 version = "0.0.1"
 
+[dependencies]
+bincode = "1.3"
+hex = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+solana-sdk = "3.0.0"
+
 [dev-dependencies]
 num_enum = "0.7"
 mollusk-svm = "0.7"
 solana-instruction = "3.0.0"
-solana-pubkey = "3.0.0"
-solana-sdk-ids = "3.0.0"
+
+[[bin]]
+name = "generate-vectors"
+path = "src/bin/generate_vectors.rs"
