--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -13,6 +13,8 @@ hex = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 solana-sdk = "3.0.0"
+solana-nonce = "3.0.0"
+solana-epoch-schedule = "3.0.0"
 
 [dev-dependencies]
 num_enum = "0.7"
