--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.0.1"
 
 [dependencies]
 bincode = "1.3"
+borsh = "1.5"
 hex = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
