--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0"
 solana-sdk = "3.0.0"
 solana-nonce = "3.0.0"
 solana-epoch-schedule = "3.0.0"
+solana-system-interface = { version = "2.0.0", features = ["bincode"] }
 
 [dev-dependencies]
 num_enum = "0.7"
