feat(program-test): add Keccak256 and ComputeBudget integration tests
Add integration tests for:
- Keccak256 hash (7 vectors): empty, hello, hello_world, solana,
  single_byte, zeros_32, ones_32
- ComputeBudget instructions (7 vectors): SetComputeUnitLimit,
  SetComputeUnitPrice, RequestHeapFrame, SetLoadedAccountsDataSizeLimit

Both tests verify encoding compatibility with official Rust SDK.

--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -17,6 +17,8 @@ solana-sdk = "3.0.0"
 solana-nonce = "3.0.0"
 solana-epoch-schedule = "3.0.0"
 solana-system-interface = { version = "2.0.0", features = ["bincode"] }
+solana-keccak-hasher = "3.0.0"
+solana-compute-budget-interface = "3.0.0"
 
 [dev-dependencies]
 num_enum = "0.7"
