--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -14,7 +14,7 @@ hex = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 solana-sdk = "3.0.0"
-solana-nonce = "3.0.0"
+solana-nonce = { version = "3.0.0", features = ["serde"] }
 solana-epoch-schedule = "3.0.0"
 solana-system-interface = { version = "2.0.0", features = ["bincode"] }
 solana-keccak-hasher = "3.0.0"
