--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.0.1"
 
 [dependencies]
 bincode = "1.3"
+blake3 = "1.5"
 borsh = "1.5"
 hex = "0.4"
 serde = { version = "1.0", features = ["derive"] }
@@ -19,6 +20,12 @@ solana-epoch-schedule = "3.0.0"
 solana-system-interface = { version = "2.0.0", features = ["bincode"] }
 solana-keccak-hasher = "3.0.0"
 solana-compute-budget-interface = "3.0.0"
+solana-loader-v3-interface = { version = "3.0.0", features = ["bincode"] }
+solana-transaction-error = "3.0.0"
+solana-stake-interface = { version = "2.0.2", features = ["bincode"] }
+solana-address-lookup-table-interface = { version = "3.0.0", features = ["bincode"] }
+solana-loader-v4-interface = { version = "2.0.0", features = ["bincode"] }
+solana-vote-interface = { version = "3.0.0", features = ["bincode"] }
 
 [dev-dependencies]
 num_enum = "0.7"
