feat(program-test): add Message serialization and System nonce instruction tests
- Add Message serialization tests (3 vectors: simple_transfer, empty_message, multi_instruction)
- Add System instruction nonce variants (3 vectors: AdvanceNonce, WithdrawNonce, AuthorizeNonce)
- Add solana-message dependency to Cargo.toml
- Update story documentation with new test coverage

Integration tests: 36/36 passed, 199 total vectors

--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -26,6 +26,7 @@ solana-stake-interface = { version = "2.0.2", features = ["bincode"] }
 solana-address-lookup-table-interface = { version = "3.0.0", features = ["bincode"] }
 solana-loader-v4-interface = { version = "2.0.0", features = ["bincode"] }
 solana-vote-interface = { version = "3.0.0", features = ["bincode"] }
+solana-message = { version = "3.0.0", features = ["bincode"] }
 
 [dev-dependencies]
 num_enum = "0.7"
