--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -27,6 +27,10 @@ solana-address-lookup-table-interface = { version = "3.0.0", features = ["bincod
 solana-loader-v4-interface = { version = "2.0.0", features = ["bincode"] }
 solana-vote-interface = { version = "3.0.0", features = ["bincode"] }
 solana-message = { version = "3.0.0", features = ["bincode"] }
+solana-slot-hashes = "3.0.0"
+solana-epoch-rewards = "3.0.0"
+solana-last-restart-slot = "3.0.0"
+solana-secp256r1-program = "3.0.0"
 
 [dev-dependencies]
 num_enum = "0.7"
